--- a/app/views/academy/tutorials/index.html.erb
+++ b/app/views/academy/tutorials/index.html.erb
@@ -22,7 +22,7 @@
   <%= will_paginate(@academy_tutorials, renderer: BootstrapPagination::Rails, :previous_label => 'Anterior', :next_label => 'Seguinte') %>
 
   <table class="table table-hover">
-   <thead class="tutorial_table_head">
+   <thead>
     <tr>
       <th width="50%" class="tutorial_text_head">TÍTULO</th>
       <th width="20%" class="tutorial_text_head">UTILIZADOR</th>
