--- a/app/views/academy/workshops/show.html.erb
+++ b/app/views/academy/workshops/show.html.erb
@@ -7,7 +7,7 @@
 
   <div style="float:right">
     <% if user_signed_in? %>
-        <%= link_to 'Novo Workshop', new_academy_workshop_path,:class=> "url"%>
+        <%= link_to '<i class="fa fa-plus"></i>Novo Workshop'.html_safe, new_academy_workshop_path,:class=> "url"%>
     <% end %>
   </div>
 </ol>
