[Update Feature] plans

--- a/app/views/welcome/_plans.html.erb
+++ b/app/views/welcome/_plans.html.erb
@@ -6,7 +6,7 @@
         <div class="panel-heading">
           <h3 class="panel-title">Regular</h3>
         </div>
-        <div class="panel-body">
+        <div class="panel-body-plan">
           <div class="the-price">
             <h1>0€</h1>
             <small>GRATUITO</small>
@@ -34,7 +34,7 @@
         <div class="panel-heading">
           <h3 class="panel-title">Horta</h3>
         </div>
-        <div class="panel-body">
+        <div class="panel-body-plan">
           <div class="the-price">
             <h1>5€</h1>
             <small>Para pequenos agricultores.</small>
@@ -58,7 +58,7 @@
     </div>
 
     <div class="col-xs-12 col-sm-6 col-lg-3  col-md-3">
-      <div class="panel panel-success">
+      <div class="panel panel-warning">
         <div class="cnrflash">
           <div class="cnrflash-inner">
                         <span class="cnrflash-label">MAIS<br>POPULAR</span>
@@ -67,7 +67,7 @@
         <div class="panel-heading">
           <h3 class="panel-title">Quinta</h3>
         </div>
-        <div class="panel-body">
+        <div class="panel-body-plan">
           <div class="the-price">
             <h1>15€</h1>
             <small>Para agricultores.</small>
@@ -95,7 +95,7 @@
         <div class="panel-heading">
           <h3 class="panel-title">Herdade</h3>
         </div>
-        <div class="panel-body">
+        <div class="panel-body-pland">
           <div class="the-price">
             <h1>25€</h1>
             <small>Para grandes agricultores.</small>
