--- a/app/assets/stylesheets/plans.css.scss
+++ b/app/assets/stylesheets/plans.css.scss
@@ -1,13 +1,6 @@
-body
-{
-  margin-top: 20px;
-}
-.panel
-{
-  text-align: center;
-}
+
 .panel:hover { box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4), 0 1px 5px rgba(130, 130, 130, 0.35); }
-.panel-body
+.panel-body-plan
 {
   padding: 0px;
   text-align: center;
