--- a/app/views/layouts/_sidebar_right_featured.html.erb
+++ b/app/views/layouts/_sidebar_right_featured.html.erb
@@ -4,16 +4,8 @@
             <div>
                 <article class="media">
                   <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
-                    <a href="#" class="url p-head"><span class="label label-danger">Planos disponíveis</span></a>
-                  </div>
-                  <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6" style="margin-top:10px">
-                      <a class="pull-left thumb p-thumb" title="Horta" style="margin-left:5px"><img src="/assets/50x50.gif"></a>
-                      <a class="pull-left thumb p-thumb" title="Quinta" style="margin-left:5px"><img src="/assets/50x50.gif"></a>
-                      <a class="pull-left thumb p-thumb" title="Herdade" style="margin-left:5px"><img src="/assets/50x50.gif"></a>
-                  </div>
-                  <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
                     <div class="media-body">
-                      <h6> <%= link_to "Mais informações...", plans_path, class:"h6 url" %></h6>
+                        <button type="button" style="width:100%" class="btn btn-primary btn-lg" onclick="location.href='<%= plans_path %>'">Subscreva aqui um plano!</button>
                     </div>
                   </div>
                 </article>
