--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -4,38 +4,61 @@
   </li>
 </ol>
 
-<h1>Listing plans</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Duration</th>
-      <th>Price</th>
-      <th>Ads limit</th>
-      <th>Event limit</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="container" style="margin-top:10px">
+  <div class="row">
     <% @plans.each do |plan| %>
-      <tr>
-        <td><%= plan.name %></td>
-        <td><%= plan.duration %></td>
-        <td><%= plan.price %></td>
-        <td><%= plan.ads_limit %></td>
-        <td><%= plan.event_limit %></td>
-        <td><%= link_to 'Show', plan %></td>
-        <td><%= link_to 'Edit', edit_plan_path(plan) %></td>
-        <td><%= link_to 'Destroy', plan, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <div class="col-xs-12 col-sm-6 col-lg-3 col-md-3">
+      <% if plan.name == "Regular" %>
+         <div class="panel panel-primary">
+      <% elsif plan.name == "Horta" %>
+          <div class="panel panel-sucess">
+      <% elsif plan.name == "Quinta" %>
+         <div class="panel panel-info">
+      <% else %>
+         <div class="panel panel-danger">
+      <% end %>
+       <!-- fazer if para verificar se está subscrito -->
+        <div class="cnrflash">
+          <div class="cnrflash-inner">
+            <span class="cnrflash-label">SUBSCRITO</span>
+          </div>
+        </div>
+       <!-- end if -->
+        <div class="panel-heading">
+          <h3 class="panel-title"><%= plan.name%></h3>
+        </div>
+        <div class="panel-body-plan">
+          <div class="the-price">
+            <h1><%= plan.price%> €</h1>
+            <small>Durante <%= plan.duration %> Meses</small>
+          </div>
+          <table class="table">
+            <tr>
+              <td><%= pluralize(plan.ads_limit, "Anúncio") %></td>
+            </tr>
+            <tr class="active">
+              <td><%= pluralize(plan.event_limit, "Evento") %></td>
+            </tr>
+            <tr>
+              <td>Acesso à Academia</td>
+            </tr>
+          </table>
+        </div>
+        <div class="panel-footer">
+          <% if plan.name != "Regular" %>
+          <a onclick="location.href='#" class="btn btn-success" style="color:white" href="#"><i class="icon-shopping-cart icon-white"></i> Comprar »</a>
+          <% end %>
+        </div>
+      </div>
+    </div>
+
     <% end %>
-  </tbody>
-</table>
+  </div>
 
-<br>
+</div>
 
-<%= link_to 'New Plan', new_plan_path %>
+<div class="fields">
+  <button type="button" class="btn btn-primary" onclick="location.href='<%= ads_path %>'">
+    <span class="icon-arrow-left" style="margin-right: 5px;"></span>Voltar
+  </button>
+</div>
