--- a/app/views/admin/event/events/index.html.erb
+++ b/app/views/admin/event/events/index.html.erb
@@ -62,6 +62,7 @@
       <th>Fim</th>
       <th>Título</th>
       <th>Descrição</th>
+      <th>Cidade</th>
       <th>Utilizador</th>
       <th></th>
       <th></th>
@@ -77,9 +78,10 @@
         <td><%= event.end_day %></td>
         <td><%= event.title %></td>
         <td><%= event.description %></td>
+        <td><%= event.city.city %></td>
         <td><%= event.user_id %></td>
         <td><%= link_to 'Ver', [:admin, event] %></td>
-        <td><%= link_to 'Editar', edit_admin_event_event_path(event) %></td>
+        <td><%= link_to 'Desaprovar', admin_unaprove_event_path(:id_aprove => event.id) %></td>
         <td><%= link_to 'Eliminar', [:admin, event], method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
       </tr>
     <% end %>
