--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -1,37 +1,59 @@
 <%= form_for(@plan) do |f| %>
-  <% if @plan.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@plan.errors.count, "error") %> prohibited this plan from being saved:</h2>
 
-      <ul>
-      <% @plan.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+      <div class="col-xs-12 col-sm-6 col-lg-3 col-md-3">
+        <% if f.name == "Regular" %>
+            <div class="panel panel-primary">
+        <% elsif f.name == "Horta" %>
+            <div class="panel panel-sucess">
+        <% elsif f.name == "Quinta" %>
+            <div class="panel panel-info">
+        <% else %>
+            <div class="panel panel-danger">
+        <% end %>
+        <!-- fazer if para verificar se está subscrito -->
+        <div class="cnrflash">
+          <div class="cnrflash-inner">
+            <span class="cnrflash-label">SUBSCRITO</span>
+          </div>
+        </div>
+        <!-- end if -->
+        <div class="panel-heading">
+          <h3 class="panel-title"><%= f.name%></h3>
+        </div>
+        <div class="panel-body-plan">
+          <div class="the-price">
+            <h1><%= f.price%> €</h1>
+            <small>Durante <%= f.duration %> Meses</small>
+          </div>
+          <table class="table">
+            <tr>
+              <td><%= pluralize(f.ads_limit, "Anúncio") %></td>
+            </tr>
+            <tr class="active">
+              <td><%= pluralize(f.event_limit, "Evento") %></td>
+            </tr>
+            <tr>
+              <td>Acesso à Academia</td>
+            </tr>
+          </table>
+        </div>
+        <div class="panel-footer">
+          <% if f.name != "Regular" %>
+              <%= f.submit "Comprar", :class=>"btn btn-primary" %>
+          <% end %>
+        </div>
+
+        <% if @plan.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(@plan.errors.count, "error") %> prohibited this plan from being saved:</h2>
+
+              <ul>
+                <% @plan.errors.full_messages.each do |msg| %>
+                    <li><%= msg %></li>
+                <% end %>
+              </ul>
+            </div>
+        <% end %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :duration %><br>
-    <%= f.text_field :duration %>
-  </div>
-  <div class="field">
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
-  </div>
-  <div class="field">
-    <%= f.label :ads_limit %><br>
-    <%= f.number_field :ads_limit %>
-  </div>
-  <div class="field">
-    <%= f.label :event_limit %><br>
-    <%= f.number_field :event_limit %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+</div>
 <% end %>
