--- a/app/views/errors/500.html.erb
+++ b/app/views/errors/500.html.erb
@@ -1,1 +1,7 @@
-<h1>500</h1>
+<div class="box">	
+	<p>
+		<h1 class="errors-title"> AgroSocial </h1>
+	    <h4 class="errors-slogan">A SEMENTE DO SEU NEGÓCIO</h4>
+	    <h3>500</h3>
+	</p>
+</div>   
