--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -5,9 +5,12 @@
 </ol>
 
 <div class="container" style="margin-top:10px">
-  <div class="row">
-    <%= render :partial => @plans %>
-  </div>
+	<div class="row">
+
+		<% @plans.each do |plan_to_send| %>
+		    <%= render 'form', :plan => plan_to_send %>
+		<% end %>
+	</div>
 
 </div>
 
