--- a/app/views/academy/tutorials/index.html.erb
+++ b/app/views/academy/tutorials/index.html.erb
@@ -8,60 +8,61 @@
 <ol class="breadcrumb" id="breadcrumbAds">
   <li class="active"><a class="url" href="<%= academy_tutorials_path %>"><i class="fa fa-tags"></i> Tutoriais</a></li>
   <% if user_signed_in? %>
-
-  <div class="pull-right">
-    <%= link_to '<i class="fa fa-plus"></i>Novo Tutorial'.html_safe, new_academy_tutorial_path,:class=> "new-tutorial" %>
-  </div>
-
+    <div class="pull-right">
+      <%= link_to '<i class="fa fa-plus"></i>Novo Tutorial'.html_safe, new_academy_tutorial_path,:class=> "new-tutorial" %>
+    </div>
   <% end %>
 </ol>
 
 <div class="row">
- <div class="panel">
-  
-  <%= will_paginate(@academy_tutorials, renderer: BootstrapPagination::Rails, :previous_label => 'Anterior', :next_label => 'Seguinte') %>
+  <div class="panel">
 
-  <table class="table table-hover">
-   <thead>
-    <tr>
-      <th width="50%" class="tutorial_text_head">TÍTULO</th>
-      <th width="20%" class="tutorial_text_head">UTILIZADOR</th>
-      <th width="14%" class="tutorial_text_head">CATEGORIA</th>
-      <th width="16%" class="tutorial_text_head">DATA DE CRIAÇÃO</th>
-    </tr>
-  </thead>
+    <%= will_paginate(@academy_tutorials, renderer: BootstrapPagination::Rails, :previous_label => 'Anterior', :next_label => 'Seguinte') %>
 
-  <% @academy_tutorials.each do |academy_tutorial| %>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th width="10%" class="tutorial_text_head">UTILIZADOR</th>
+          <th width="23%" class="tutorial_text_head">TUTORIAL</th>
+          <th width="40%" class="tutorial_text_head">DESCRIÇÃO</th>
+          <th width="10%" class="tutorial_text_head">CATEGORIA</th>
+          <th width="17%" class="tutorial_text_head">DATA DE CRIAÇÃO</th>
+        </tr>
+      </thead>
 
-  <tbody>
+      <% @academy_tutorials.each do |academy_tutorial| %>
 
-    <tr class="tutorial_table_body">
-      <td class="title-font" id="text-link">
-        <%= link_to academy_tutorial.title, academy_tutorial %>
-      </td>
-      <td>
-        <p class="title-font"> <%= academy_tutorial.user.name %> </p>
-      </td>
-      <td>
-        <span class="label" style="background-color: #<%= academy_tutorial.category.color %>">
-          <%= academy_tutorial.category.name %>
-        </span>
-      </td>
-      <td class="title-font">
-        <%= academy_tutorial.created_at.strftime("%F") %>
-      </td>
-    </tr>
-  </tbody>
+      <tbody>
+        <tr class="tutorial_table_body">
+          <td style="vertical-align:middle;">
+            <div class="media" style="position:relative; left:50%; margin-left:-25px;">
+              <%= link_to (image_tag academy_tutorial.user.avatar.url(:medium), :width => '50', :height => '50',:class => "img-circle pull-left"), academy_tutorial.user %>
+            </div>
+          </td>
+          <td class="title-font" id="text-link" style="vertical-align:middle;">
+            <%= link_to academy_tutorial.title, academy_tutorial %>
+          </td>
+          <td class="title-font" id="text-link" style="vertical-align:middle;">
+            <%= link_to academy_tutorial.rapid_description, academy_tutorial %>
+          </td>
+          <td style="vertical-align:middle;">
+            <span class="label" style="background-color: #<%= academy_tutorial.category.color %>">
+              <%= academy_tutorial.category.name %>
+            </span>
+          </td>
+          <td class="title-font" style="vertical-align:middle;">
+            <%= academy_tutorial.created_at.strftime('%d-%m-%Y') %>
+          </td>
+        </tr>
+      </tbody>
+      
+      <% end %>
 
-<% end %>
+    </table> 
+    
+    <%= will_paginate(@academy_tutorials, renderer: BootstrapPagination::Rails, :previous_label => 'Anterior', :next_label => 'Seguinte') %>
 
-
-</table> 
-<%= will_paginate(@academy_tutorials, renderer: BootstrapPagination::Rails, :previous_label => 'Anterior', :next_label => 'Seguinte') %>
-
-
-</div>
-
+  </div>
 </div>
 
 
