--- a/app/views/academy/workshops/show.html.erb
+++ b/app/views/academy/workshops/show.html.erb
@@ -75,7 +75,7 @@
 
                                      <div class="text-center">
                                         
-                                        <%= link_to 'Desinscrever do Workshop', @academy_workshop_registration, method: :destroy,:class=>"fa fa-minus", data: { confirm: 'Are you sure?' } %>
+                                        <%= link_to ' Desinscrever do Workshop', @academy_workshop_registration, method: :destroy,:class=>"fa fa-minus demo btn btn-primary", data: { confirm: 'Are you sure?' } %>
                                     </div>
 
                                   <% end %>
