--- a/app/assets/stylesheets/academy/workshops.css
+++ b/app/assets/stylesheets/academy/workshops.css
@@ -27,8 +27,11 @@
 
 
 .information_show_workshop span{
-	color: #EA5B0C;
+	color: black;
 	font-size: 16px;
+	font-weight: bold;
+
+
 }
 
 .information_show_workshop{
@@ -116,8 +119,9 @@
 }
 
 .information_workshop span{
-	color: #EA5B0C;
-	font-size: 16px;
+	color: black;
+	font-size: 18px;
+	font-weight:bold;
 }
 
 .information_data span{
@@ -139,17 +143,32 @@
 }
 
 .information_left_info span{
-	margin-left: 2%;
+	margin-left: 10%;
 }
-
+.information_left_info{
+	
+}
 
 .workshop_notinscription{
 	font-family: "Oswald";
   font-weight: normal;
-  color: black;
+  color: #00A75D;
 	font-size: 32px;
 	border:  2px solid #e5e5e5;
 }
+
+.workshop_table_head th{
+
+	font-family: "Oswald";
+  font-weight: normal;
+   color: #00A75D;
+	font-size: 16px;
+}
+
+.ui-group-buttons a:hover{
+	color: black;
+}
+
 
 
 
