--- a/app/views/academy/questions/index.html.erb
+++ b/app/views/academy/questions/index.html.erb
@@ -33,7 +33,7 @@
             </div>
           </td>
           <td style="vertical-align:middle;">
-            <h4 class="media-heading">
+            <h4 class="media-heading" id="text-link">
               <%= link_to academy_question.title, academy_question %>
             </h4>
             <p><small><%= academy_question.text.html_safe %></small></p>
