--- a/app/views/academy/questions/_question.html.erb
+++ b/app/views/academy/questions/_question.html.erb
@@ -5,21 +5,18 @@
   <a class="url" href="<%= academy_question_path(@academy_question.id) %>"> > <%= @academy_question.title %></a>
   </li>
   <% if user_signed_in? %>
-      <%= link_to 'Nova Pergunta', new_academy_question_path,:class=> "url", style:"float:right"%>
+      <%= link_to '<i class="fa fa-plus"></i>Nova Pergunta'.html_safe, new_academy_question_path,:class=> "url", style:"float:right"%>
   <% end %>
 </ol>
 
 <div class="col-lg-12">
   <section class="panel">
     <header class="panel-heading border-header">
-      <div class="pull-right">
-
-        <%##  botão verde com um lapis para editar a pergunta  ##%>
-        <%= link_to '<i class="fa fa-pencil"></i>'.html_safe , edit_academy_question_path(@academy_question), :class => "btn btn-primary btn-xs" if @academy_question.user.id == current_user.id %>
-
-        <%##  botão vermelho com um caixote para eliminar a pergunta  ##%>
-        <%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, @academy_question, method: :delete, :class => "btn btn-danger btn-xs" if @academy_question.user.id == current_user.id %>
-
+      <div style="float:right">
+        <% if user_signed_in? && current_user.id == @academy_question.user_id %>
+              <%= link_to '<i class="fa fa-edit"></i>Editar '.html_safe, edit_academy_question_path(@academy_question), class:'no-effect', :tile=> "Editar Pergunta" %>
+              <%= link_to '<i class="fa fa-trash-o"></i>Eliminar '.html_safe, @academy_question, class:'no-effect', method: :delete, data: { confirm: 'Tem a certeza que quer apagar a sua pergunta?' } ,:tile=> "Apagar Pergunta"%>
+        <% end %>
       </div>
 
       <div class="" >
