--- a/app/views/academy/tutorials/index.html.erb
+++ b/app/views/academy/tutorials/index.html.erb
@@ -30,27 +30,28 @@
         </tr>
       </thead>
 
+      <tbody>
+
       <% @academy_tutorials.each do |academy_tutorial| %>
 
-      <tbody>
         <tr class="tutorial_table_body">
           <td style="vertical-align:middle;">
-            <div class="media" style="position:relative; left:50%; margin-left:-25px;">
+            <div class="media" style="position:relative; left:50%; margin-left:-25px;" id="text-link">
               <%= link_to (image_tag academy_tutorial.user.avatar.url(:medium), :width => '50', :height => '50',:class => "img-circle pull-left"), academy_tutorial.user %>
             </div>
           </td>
-          <td class="title-font" id="text-link" style="vertical-align:middle;">
+          <td style="vertical-align:middle;" id="text-link">
             <%= link_to academy_tutorial.title, academy_tutorial %>
           </td>
-          <td class="title-font" id="text-link" style="vertical-align:middle;">
-            <%= link_to academy_tutorial.rapid_description, academy_tutorial %>
+          <td style="vertical-align:middle;">
+            <%= academy_tutorial.rapid_description %>
           </td>
           <td style="vertical-align:middle;">
             <span class="label" style="background-color: #<%= academy_tutorial.category.color %>">
               <%= academy_tutorial.category.name %>
             </span>
           </td>
-          <td class="title-font" style="vertical-align:middle;">
+          <td style="vertical-align:middle;">
             <%= academy_tutorial.created_at.strftime('%d-%m-%Y') %>
           </td>
         </tr>
