--- a/app/views/academy/workshops/index.html.erb
+++ b/app/views/academy/workshops/index.html.erb
@@ -32,7 +32,7 @@
           <td style="vertical-align:middle;"><%= academy_workshop.title %></td>
           <td style="vertical-align:middle;"><%= academy_workshop.description %></td>
           <td style="vertical-align:middle;"><%= academy_workshop.local %></td>
-          <td style="vertical-align:middle;"><%= academy_workshop.date.strftime('%d-%m-%Y') %></td>
+          <td style="vertical-align:middle;"><%= academy_workshop.date %></td>
         </tr>
         <% end %>
 
