load dos JS alterado

--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -5,6 +5,8 @@
 <script> showNotify("<%= flash[:error] %>","error") </script>
 <% end %>
 
+<!--<%= javascript_include_tag "ads-pics/gallery" %>-->
+
 
 <ol class="breadcrumb" id="breadcrumbAds">
   <li class="active">
@@ -109,8 +111,8 @@
         </div><!-- container -->
         <!--  essencial-->
         <!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> -->
-        <!-- next prevuis -->  <script type="text/javascript" src="/assets/javascripts/jquery.elastislide.js"></script>
-        <!-- main --><script type="text/javascript" src="/assets/javascripts/gallery.js"></script>
+        <!-- next prevuis -->  <script type="text/javascript" src="/assets/ads-pics/jquery.elastislide.js"></script>
+        <!-- main --><script type="text/javascript" src="/assets/ads-pics/gallery.js"></script>
 
       </div>
       <!-- Information ADS -->
