Admin tutorial to Admin tutorial, Tutorial to Tutorial

--- a/app/views/admin/academy/tutorials/edit.html.erb
+++ b/app/views/admin/academy/tutorials/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @academy_tutorial %> |
-<%= link_to 'Back', academy_tutorials_path %>
+<%= link_to 'Back', admin_academy_tutorials_path %>
