--- a/app/views/admin/academy/tutorials/show.html.erb
+++ b/app/views/admin/academy/tutorials/show.html.erb
@@ -8,4 +8,4 @@
 
 
 <%= link_to 'Edit', edit_academy_tutorial_path(@academy_tutorial) %> |
-<%= link_to 'Back', academy_tutorials_path %>
+<%= link_to 'Back', admin_academy_tutorials_path %>
