--- a/app/assets/stylesheets/academy/answers.css.scss
+++ b/app/assets/stylesheets/academy/answers.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the Academy/Answers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#user-avatar {
+	text-align: center;
+}
