--- a/app/views/academy/answers/_answer.html.erb
+++ b/app/views/academy/answers/_answer.html.erb
@@ -1,18 +1,14 @@
 <div class="col-lg-12">
   <section class="panel <%=  is_mine?( answer.user.id ) %>">
-    <header class="panel-heading ">
-
-    </header>
-    <div class="panel-body">
+    <header class="panel-heading" style="height:40px;">
       <div class="pull-right">
-        <%##  botão verde com o lapis para editar a resposta  ##%>
-        <%= link_to '<i class="fa fa-pencil"></i>'.html_safe , edit_academy_answer_path(answer), :class => "btn btn-primary btn-xs" if answer.user.id == current_user.id %>
-        <%##  botão vermelho com o caixote para eliminar a resposta  ##%>
-        <%= link_to '<i class="fa fa-trash-o"></i>'.html_safe , answer , method: :delete, data: { confirm: 'Tem a certeza?' }, :class => "btn btn-danger btn-xs" if answer.user.id == current_user.id %>
+        <%= link_to '<i class="fa fa-edit"></i>Editar '.html_safe , edit_academy_answer_path(answer), :class => 'no-effect' if answer.user.id == current_user.id %>
+        <%= link_to '<i class="fa fa-trash-o"></i>Eliminar '.html_safe , answer , method: :delete, data: { confirm: 'Tem a certeza?' }, :class => 'no-effect' if answer.user.id == current_user.id %>
       </div>
+    </header>
 
-
-      <div class="col-xs-2 col-md-2"><%##  Avatar do user que respondeu  ##%>
+    <div class="panel-body">
+      <div class="col-xs-2 col-md-2" id="user-avatar"><%##  Avatar do user que respondeu  ##%>
         <%=link_to image_tag(answer.user.avatar.url(:medium),:width => "70%",:class => "img-circle"), answer.user %>
 
         <%= answer.user.name %>
@@ -28,8 +24,6 @@
       <%###  answers votes  ###%>
             <%#  Verify if the user is logged or if is the answer's owner %>
             <% if !user_signed_in? || current_user.id == answer.user.id #if not logged or is the owner them cant vote %>
-
-
               <label class="label label-default" syle="font-size:10px"><%= answer.up - answer.down %></label>
               <label class="label label-info">Minha Resposta</label>
             <% else %>
@@ -44,8 +38,9 @@
       <%###  end of answers votes  ###%>
 
           <div class="pull-right">
-            <%= was_edited?( answer ) %>
-
+            <abbr class="timeago" title="<%= answer.created_at.getutc.iso8601 %>">
+                <%= answer.created_at.to_s(:db) %>
+            </abbr>
           </div>
        </div>
 
