--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -15,6 +15,9 @@
       <th>Cidade</th>
       <th>Anúncios</th>
       <th>Eventos</th>
+      <% @plans.each do |p| %>
+       <th><%= p.name %></th> 
+       <%end%>
       <th>Tipo</th>
       <th></th>
       <!--th></th-->
@@ -31,7 +34,10 @@
         <td><%= user.email %></td>
         <td><%= user.city.city %></td>
         <td><%= user.ads.count %></td>
-        <td><%# user.events.count %></td>
+        <td><%# user.event.count %></td>
+        <% @plans.each do |p| %>
+          <th><%= user.plans.where('plan_id=?',p.id).count %></th>
+        <% end %>
         <td><%= if user.user_type==2 then 'Admin' else 'User' end%></td>
         <td><%= link_to 'Ver', admin_user_path(user) %></td>
         <!--td><%# link_to 'Editar', edit_admin_user_path(user) %></td-->
