[Update Feature] Featured ads - function done

--- a/app/views/layouts/_sidebar_right_featured.html.erb
+++ b/app/views/layouts/_sidebar_right_featured.html.erb
@@ -10,15 +10,15 @@
     <section class="panel">
         <div class="panel-body">
             <div>
-              <% @ads_highlights.each do |destaque| %>
+              <% @ads_highlights.each do |highlight| %>
 
                   <article class="media">
                     <a class="pull-left thumb p-thumb">
                       <img src="/assets/50x50.gif">
                     </a>
                     <div class="media-body">
-                      <a href="#" class=" p-head"><%= destaque.title %></a>
-                      <p>Lorem ipsum dolor sit amet</p>
+                      <a class="url" href="#" class=" p-head"><%= highlight.title %></a>
+                      <p><%= truncate(highlight.description,:lenght=>35 ) %></p>
                     </div>
                   </article>
 
