--- a/app/views/layouts/_sidebar_left_ads.erb
+++ b/app/views/layouts/_sidebar_left_ads.erb
@@ -25,29 +25,30 @@
       </ul>
     </div>
 
-    <div class="btn-group" style="width: 100%; margin-bottom: 2px">
+     <div class="btn-group" style="width: 100%; margin-bottom: 2px">
       <button type="button" class="btn btn-sm" style="width: 80%;text-align: left">Cidade</button>
       <button type="button" class="btn btn-sm dropdown-toggle" style="width: 20%" data-toggle="dropdown">
         <span class="caret"></span>
         <span class="sr-only">Toggle Cidade</span>
       </button>
-      <ul class="dropdown-menu" role="menu">
-        <% @cities.each do |city| %>
-            <li>
-              <% if !params[:search].nil? %>
-                  <%  if params[:search].include?("city:" + "#{city.id}") %>
-                      <%= check_box_tag "search[]","city:#{city.id}", "active" %>
-                  <% else %>
-                      <%= check_box_tag "search[]","city:#{city.id}" %>
-                  <% end %>
-              <% else %>
-                  <%= check_box_tag "search[]","city:#{city.id}" %>
-              <% end %>
-              <%= city.city %>
-            </li>
-        <% end %>
-      </ul>
     </div>
+    <select multiple name="cities[]" class="col-xs-12 col-md-12 col-lg-12" placeholder="Seleccione as cidades">
+              <option value="">Selecione...</option>
+              <% @districts.each do |district| %>
+                <% !params[:cities].blank? ? (cities = params[:cities]) : (cities = [])%>
+                <optgroup label="<%= district.name %>">
+                     <% district.cities.each do |city| %>
+
+                           <option value="<%= city.id %>" <%= 'selected' if cities.include?(city.id.to_s) %> ><%= city.city %></option>
+                     <% end %>
+                </optgroup>
+              <% end %>
+      </select>
+      <br><br>
+
+     
+
+   
 
     <%= submit_tag "Filtrar",class:"btn btn-default btn-sm",style:"width:100%" %>
 <% end %>
